<resources>
    <string name="app_name">Reserva Everis School</string>
    <string name="titulo">Formulario de registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido1">Apellido 1</string>
    <string name="apellido2">Apellido 2</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="modalidad">Modalidad</string>
    <string name="comentarios">Comentarios</string>
    <string name="btnReservar">RESERVAR PLAZA</string>
    <string name="spinnerOnline">OnLine</string>
    <string name="spinnerPresencial">Presencial</string>
    <string name="campoVacio">Este campo esta vacio</string>
    <string name="aviso">Aviso</string>
    <string name="mensaje">Se va a proceder a realizar la reserva</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="msnToast">Se ha realizado la reserva de la plaza</string>
    <string name="navbarLocation">Localizacion</string>
    <string name="navbarBorwser">Abrir en navegador</string>
    <string name="statusbarTittle2">Everis School</string>
    <string name="statusbarTittle1">Solicita tu plaza</string>

</resources>